--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,41 @@ html {
 *::after {
   box-sizing: inherit;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(194, 197, 199);
+  font-size: 15px;
+}
+
+h2 {
+  margin: 0;
+}
+
+.container {
+  margin: 20px 0;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.pokemon {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  text-align: center;
+}
+
+img {
+  display: block;
+  width: 130px;
+  height: auto;
+}
