--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 html {
   box-sizing: border-box;
+  font-size: 62.5%;
 }
 
 *,
 *::before,
 *::after {
+  padding: 0;
   box-sizing: inherit;
 }
 
@@ -13,7 +15,7 @@ body {
   justify-content: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: rgb(194, 197, 199);
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 h2 {
@@ -21,27 +23,30 @@ h2 {
 }
 
 .container {
-  margin: 20px 0;
-  max-width: 1200px;
+  max-width: 128rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 5rem 0.2rem;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .pokemon {
-  width: 200px;
-  height: 200px;
+  width: 18rem;
+  height: 18rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 8px;
+  border-radius: 0.8rem;
   text-align: center;
 }
 
 img {
   display: block;
-  width: 130px;
+  width: 70%;
   height: auto;
 }
